--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      TEST_USER_NAME: Hello
+      TEST_USER_NAME: ${{ secrets.TEST_USER_NAME }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -23,5 +23,4 @@ jobs:
       - name: Run a one-line script
         run: | 
             echo ${TEST_USER_NAME}
-            echo ${secrets.TEST_USER_NAME}
 
