--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,5 @@ jobs:
       # Runs a single command using the runners shell
       - shell: bash 
         run: | 
-            echo ${TEST_USER_NAME}
+            echo "${TEST_USER_NAME}"
 
