--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,6 +14,12 @@ jobs:
   allinone:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      TEST_USER_NAME: ${{ secrets.TEST_USER_NAME }}
+      TEST_USER_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
+      TEST_SUBSCRIPTION_ID: ${{ secrets.TEST_SUBSCRIPTION_ID }}
+      TEST_TENANT_ID: ${{ secrets.TEST_TENANT_ID }}
+      CI_ENABLED: "true"
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
