--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,13 +14,8 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    env:
-      TEST_USER_NAME: ${{ secrets.TEST_USER_NAME }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Runs a single command using the runners shell
-      - shell: bash 
-        run: | 
-            echo "${TEST_USER_NAME}"
+      - uses: IvanJobs/AllInOneSample 
 
