--- a/.github/workflows/test0701.yml
+++ b/.github/workflows/test0701.yml
@@ -34,6 +34,8 @@ jobs:
             echo ${SHELL}
             node -v
             npm -v
+            which node
+            env
 
       #- uses: IvanJobs/AllInOneSample/teams-toolkit-cicd@v3
       #  with:
