--- a/.github/workflows/test0701.yml
+++ b/.github/workflows/test0701.yml
@@ -26,10 +26,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       
-      - uses: IvanJobs/AllInOneSample@v3
-        with:
-          operation-type: 'Build Teams App'
-          project-root: ${{github.workspace}}
+        #- uses: IvanJobs/AllInOneSample@v3
+        #with:
+        #  operation-type: 'Build Teams App'
+        #  project-root: ${{github.workspace}}
 
       - name: Test The Project
         run: echo "do nothing"
