chore: remote pass

--- a/.github/workflows/test0705.yml
+++ b/.github/workflows/test0705.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TEST_USER_NAME: ${{ secrets.TEST_USER_NAME }}
-      TEST_USER_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
+      # TEST_USER_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
       TEST_SUBSCRIPTION_ID: ${{ secrets.TEST_SUBSCRIPTION_ID }}
       TEST_TENANT_ID: ${{ secrets.TEST_TENANT_ID }}
       CI_ENABLED: "true"
