--- a/.github/workflows/test0705.yml
+++ b/.github/workflows/test0705.yml
@@ -26,9 +26,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       
-      - uses: OfficeDev/TeamsFx/packages/github-actions/teams-toolkit-cicd@ruhe/action_toolkit_cicd 
-        with:
-          operation-type: 'Build Teams App'
+        #- uses: OfficeDev/TeamsFx/packages/github-actions/teams-toolkit-cicd@ruhe/action_toolkit_cicd 
+        #with:
+        #  operation-type: 'Build Teams App'
 
       - name: Test The Project
         run: echo "do nothing"
