--- a/.github/workflows/test0705.yml
+++ b/.github/workflows/test0705.yml
@@ -31,9 +31,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       
-        #- uses: OfficeDev/TeamsFx/packages/github-actions/teams-toolkit-cicd@ruhe/action_toolkit_cicd 
-        #with:
-        #  operation-type: 'Build Teams App'
+      - uses: OfficeDev/TeamsFx/packages/github-actions/teams-toolkit-cicd@ruhe/action_toolkit_cicd 
+        with:
+          operation-type: 'Build Teams App'
 
       - name: Test The Project
         run: echo "do nothing"
@@ -41,8 +41,6 @@ jobs:
       - uses: OfficeDev/TeamsFx/packages/github-actions/teams-toolkit-cicd@ruhe/action_toolkit_cicd 
         with:
           operation-type: 'Provision Hosting Environment'
-      - name: Echo Output for Provision
-        run: echo ${{outputs.config-file-path}} 
 
       - uses: OfficeDev/TeamsFx/packages/github-actions/teams-toolkit-cicd@ruhe/action_toolkit_cicd 
         with:
