--- a/.github/workflows/test0705.yml
+++ b/.github/workflows/test0705.yml
@@ -15,7 +15,8 @@ jobs:
     # The type of runner that the job will run on
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest]
+          # os: [windows-latest, ubuntu-latest]
+        os: [ubuntu-latest]
         node-version: [12]
 
     runs-on: ${{ matrix.os }}
